Scrollbar added and fixed font size and active bg

--- a/weather-app/src/app/shared/components/navigation/navigation.component.scss
+++ b/weather-app/src/app/shared/components/navigation/navigation.component.scss
@@ -64,6 +64,7 @@
     max-width: 25rem;
     color: #FFFFFF;
     font-size: 14px;
+    font-weight: 500;
     letter-spacing: 0;
     line-height: 2.5rem;
     text-align: right;
@@ -112,8 +113,7 @@
 
       &.active {
         color: #202020;
-        font-weight: 500;
-
+        font-weight: 600;
       }
     }
 
